Clear API_KEY in googleScrappingAPI.html
Updated API_KEY variable to be empty for security reasons.

--- a/googleScrappingAPI.html
+++ b/googleScrappingAPI.html
@@ -353,7 +353,7 @@
     </script>
 
     <script>
-        const API_KEY = 'AIzaSyD2lu6gysJHEELOEBTvfaNpoeZXWgllvlo'; // Substituir pela chave de API Google
+        const API_KEY = ''; // Substituir pela chave de API Google
         const script = document.createElement('script');
         
         script.src = `https://maps.googleapis.com/maps/api/js?key=${API_KEY}&loading=async&libraries=places&callback=initMap`;
